changed factor to 1.5 + replaced getLast()-method due to java version conflicts